Fix spacing

--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -18,6 +18,7 @@
 .sp-modal {
   display: none;
   outline: none;
+  box-sizing: border-box;
   font-family: @font;
 
   background-color: white;
